fixed margins on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1643,7 +1643,7 @@ footer .social-icon {
   }
 }
 
-@media (max-width: 410px) {
+@media (max-width: 400px) {
   .sponsor-spotlight {
     width: 90%;
     display: block;
@@ -1653,8 +1653,8 @@ footer .social-icon {
   }
 
   .mlf-desc {
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 7%;
+    margin-right: 7%;
   }
 
   .sponsorlogo1 {
